# zyuzyubliki_test_task

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
alembic/: env.py
alembic/versions/: 91c58f89c9f4_first_migration.py  e2ef9e0407f0_first_migration.py
app/: main.py
app/bot/: bot.py  constants.py  conversation.py  utils.py
app/core/: base.py  client_session.py  config.py
app/models/: __init__.py  parsing_data.py
app/parser/: product_parser.py
